# lambda-interpreter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lambda-interpreter.cabal
app/: Main.hs
src/: Combinators.hs  Defs.hs  Expansion.hs  Interpreter.hs  Reduction.hs  load-stlc.ghci
src/Applicative/: ApplicativeTerm.hs
src/Builtin/: Environment.hs
src/Church/: List.hs  Logical.hs  Numerals.hs  Pair.hs
src/Combinators/: Named.hs
src/Command/: Command.hs  CommandHelp.hs  CommandParser.hs  CommandResult.hs
src/Named/: LambdaParser.hs  LambdaTerm.hs
src/Nameless/: LocallyNamelessTerm.hs  NamelessTerm.hs  Parser.hs
src/Pager/: Pager.hs
src/Parser/: Parser.hs
src/STLC/: Inference.hs  Type.hs  TypeFormatter.hs
src/Typed/: TypedTerm.hs
src/Utils/: NamedTerm.hs  StepThrough.hs  Substitution.hs  Visualisation.hs
tests/: Main.hs  Nameless.hs  Repl.hs
